standardize in structure template

--- a/htmx/templates/todo/partials/edit.html
+++ b/htmx/templates/todo/partials/edit.html
@@ -1,5 +1,5 @@
 <form
-    hx-post="edit/{{ todo.id }}"
+    hx-post="{% url "edit_todo" todo.id %}"
     hx-target="closest article"
     hx-swap="outerHTML"
     hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
