--- a/htmx/templates/todo/todos.html
+++ b/htmx/templates/todo/todos.html
@@ -9,7 +9,7 @@
         <div class="w-4/5 my-6 mx-auto p-2 lg:p-10 bg-white rounded-xl">
             <form
                 class="flex mb-6 space-x-4"
-                hx-post="/htmx/todos/add-todo/"
+                hx-post="{% url "add_todo" %}"
                 hx-target="#todos"
                 hx-swap="afterend"
                 hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
